# auto-mail-charge

./: Cargo.toml
src/: email.rs  main.rs  screenshot_exchange.rs  usd_exchange.rs  vars.rs
