[package]
name = "auto-mail-charge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
job_scheduler = "*"
headless_chrome = "1.0.7"
futures = "0.3.29"
lettre = "0.11.0"
dotenv = "0.15.0"